--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	// Spring Boot Default
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// Spring Boot Mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
 	// Spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
