--- a/.github/workflows/dev-cicd.yml
+++ b/.github/workflows/dev-cicd.yml
@@ -9,9 +9,6 @@ on:
       - synchronize
       - closed
 
-  push:
-    branches: [ "dev" ]  # 병합 후 dev 브랜치로 푸시될 때 CD 실행
-
 jobs:
   CI:
     if: github.event_name == 'pull_request' && github.event.action != 'closed'  # PR이 닫히지 않았을 때 실행
@@ -53,15 +50,18 @@ jobs:
 
       ### Docker Image Build and Push
       - name: Login to Docker Hub
+        if: github.event.pull_request.merged == true
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Set up Docker Buildx
+        if: github.event.pull_request.merged == true
         uses: docker/setup-buildx-action@v2
 
       - name: Build and push
+        if: github.event.pull_request.merged == true
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -71,7 +71,8 @@ jobs:
 
   # closed에 대한 server deploy
   CD:
-    if: github.event_name == 'push'  # push 이벤트에서만 실행
+    if: github.event.pull_request.merged == true
+    needs: [CI]
     runs-on: ubuntu-20.04
 
     steps:
