--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-aws-context:2.2.6.RELEASE'
 	implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure:2.2.6.RELEASE'
 
+	// TSID
+	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
+
 	// Testing Dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
