--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
 	// MYSQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -78,6 +83,21 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
+def generatedFiles = layout.buildDirectory.dir('generated/querydsl').get().asFile
+
+tasks.withType(JavaCompile).configureEach {
+	options.getGeneratedSourceOutputDirectory().set(file(generatedFiles))
+}
+
+sourceSets {
+	main.java.srcDirs += [ generatedFiles ]
+}
+
+clean {
+	delete file(generatedFiles)
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
